# DES5YR_SNeIa_nohost

./: 0.expectations_des5.py  1.SNN_trainedmodels.py  2.SALT2_SNphotoz_biases.py  2.simultaneousSALT_biases.py  3.sample_without_redshifts.py  4.early_classification.py  5.comparisson_different_samples.py  README.md  mise.toml  pyproject.toml
myutils/: cuts.py  data_utils.py  metric_utils.py  plot_utils.py  population_utils.py  science_utils.py  utils_emcee_poisson.py
samples/: DES_noredshift_Moller2024_w_SALTandhostinfo.csv  photoIanoz_SNphotoz_HQ.csv
samples/previous_works/: Moller2022_DES5yr_SNeIa_whostz.csv  Moller2022_DES5yr_SNeIa_whostz_JLA.csv
utils/: conf_utils.py  cuts.py  data_utils.py  metric_utils.py  plot_utils.py  population_utils.py  science_utils.py  utils_emcee_poisson.py
